--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
 	<a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a>
+
+	<a href="recipes/broccoli-ripassati.html">Broccoli Ripassati</a>
 </body>
 
 </html>
