Finished all iterations

--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -6,20 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cinnamon Rolls</h1> 
+    <h1>Cinnamon Rolls</h1>
+    <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls"> 
     <h2>
-        <em>This is a recipe for cinnamon rolls.</em>
+        <em>Description</em>
     </h2>
     <p>I don't know what else to say. I like this recipe because it's eggless.</p>
     <h3>Ingredients</h3>
     <h4>Tangzhong</h4>
     <ul>
-        <li>113g milk</li>
+        <li>1/2 cup milk</li>
         <li>3 tbsp bread flour</li>
+        <li>1/2 tsp vanilla</li>
     </ul>
     <h4>Dough</h4>
     <ul>
-        <li>151g milk</li>
+        <li>2/3 cup milk</li>
         <li>300g bread flour</li>
         <li>1 tsp salt</li>
         <li>2 tbsp sugar</li>
@@ -32,7 +34,33 @@
         <li>107g brown sugar</li>
         <li>2 tbsp bread flour</li>
         <li>4 tsp cinnamon</li>
+        <li>1/2 tsp vanilla</li>
         <li>pinch of salt</li>
     </ul>
+    <h3>Steps</h4>
+    <h4>Tangzhong</h4>
+        <ol>
+        <li>Mix 1/2 cup milk, 3 tbsp bread flour, 1/2 tsp vanilla in a saucepan</li>
+        <li>Cook until thickened for up to 3 min</li>
+        <li>Add to stand mixer bowl</li>
+    </ol>
+    <h4>Dough</h4>
+    <ol>
+        <li>Add 300g bread flour, 2/3 cup milk, 1 tsp salt, 2 tbsp sugar, 2 tsp instant yeast, and 57g softened butter to stand mixer bowl</li>
+        <li>Mix on medium-low for up to 12 min</li>
+        <li>Shape, cover, and let rise for 1 hr</li>
+    </ol>
+    <h4>Filling</h4>
+    <ol>
+       <li>Mix 14g melted butter, 107g brown sugar, 2 tbsp bread flour, 4 tsp cinnamon, 1/2 tsp vanilla, pinch of salt</li>
+    </ol>
+    <h4>Assembly</h4>
+    <ol>
+        <li>Roll out dough, spread filling</li>
+        <li>Make rolls, arrange in dutch oven, and let rise for 1 hr</li>
+        <li>Preheat oven to  375°F</li>
+        <li>Bake for up to 20 min</li>
+        <li>Top with melted butter</li>
+    </ol>
 </body>
 </html>
