changed font and background colour

--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/odin-recipes/styles.css">
+    <title>Cinnamon Rolls</title>
 </head>
 <body>
     <h1>Cinnamon Rolls</h1>
     <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls"> 
-    <h2>
-        <em>Description</em>
-    </h2>
-    <p>I don't know what else to say. I like this recipe because it's eggless.</p>
+    <h2>Description</h2>
+    <p><em>I don't know what else to say. I like this recipe because it's eggless.</em></p>
     <h3>Ingredients</h3>
     <h4>Tangzhong</h4>
     <ul>
