--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cinnamon Rolls</h1>
-    <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls"> 
+    <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls" width="320px" height="212px"> 
     <h2>Description</h2>
     <p><em>I don't know what else to say. I like this recipe because it's eggless.</em></p>
     <h3>Ingredients</h3>
