--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -7,11 +7,11 @@
     <title>Cinnamon Rolls</title>
 </head>
 <body>
-    <h1>Cinnamon Rolls</h1>
-    <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls" width="320px" height="212px"> 
-    <h2>Description</h2>
-    <p><em>I don't know what else to say. I like this recipe because it's eggless.</em></p>
-    <h3>Ingredients</h3>
+    <h1 class="centered">Cinnamon Rolls</h1>
+    <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" alt="a picture of cinnamon rolls" width="320px" height="212px" class="centered"> 
+    <h2 class="centered">Description</h2>
+    <p class="centered"><em>I don't know what else to say. I like this recipe because it's eggless.</em></p>
+    <h3 class="centered">Ingredients</h3>
     <h4>Tangzhong</h4>
     <ul>
         <li>1/2 cup milk</li>
@@ -36,7 +36,7 @@
         <li>1/2 tsp vanilla</li>
         <li>pinch of salt</li>
     </ul>
-    <h3>Steps</h4>
+    <h3 class="centered">Steps</h4>
     <h4>Tangzhong</h4>
         <ol>
         <li>Mix 1/2 cup milk, 3 tbsp bread flour, 1/2 tsp vanilla in a saucepan</li>
