fixed ingredient heading

--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -11,7 +11,7 @@
     <img class="centered" alt="a picture of cinnamon rolls" src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image/public/2020-12/perfectly-pillowy-cinnamon-rolls.jpg?itok=03h7-5jI" width="320px" height="212px"> 
     <h2 class="centered">Description</h2>
     <p class="centered"><em>I don't know what else to say. I like this recipe because it's eggless.</em></p>
-    <h3">Ingredients</h3>
+    <h3>Ingredients</h3>
     <h4>Tangzhong</h4>
     <ul>
         <li>1/2 cup milk</li>
